# browser_cookie3_patched

./: .gitignore  pyproject.toml
.github/workflows/: test_linux.yml  test_windows.yml
browser_cookie3/: __init__.py  __main__.py
tests/: test-requirements.txt  test_browsers.py
tests/utils/: __init__.py  browser_paths.py  driver_version.py  user_agent.py
